improve event endpoint
